--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -8,32 +8,67 @@
 </head>
 <body>
   <div id="app">
-    <h2>AlgoGit</h2>
     <div id="repoSetup" class="hidden">
       <form id="repoSetupForm">
         <label for="repoUrl">GitHub Repository URL *</label>
         <input type="url" id="repoUrl" placeholder="https://github.com/username/repo.git" required />
-        <label for="repoName">Display Name (optional)</label>
-        <input type="text" id="repoName" placeholder="My LeetCode Solutions" />
+        <label for="Email">Email</label>
+        <input type="email" id="Email" placeholder="Enter your email" />
+        <label for="username">Display Name (optional)</label>
+        <input type="text" id="username" placeholder="My LeetCode Solutions" />
         <button type="submit">Connect Repo</button>
       </form>
     </div>
 
-    <div id="repoInfo" class="hidden">
-      <p>
-        Connected to repo: <strong id="repoDisplayName"></strong><br />
-        <a id="repoLink" href="#" target="_blank" rel="noopener noreferrer">View on GitHub</a>
-      </p>
-      <button id="syncNowBtn">Sync Now</button>
-      <p id="syncStatus">Last sync: --</p>
-    </div>
+  <div id="repoInfo" class="hidden">
+  <div class="streak-header">
+    <h2>🔥 2-Day Streak</h2>
+    <p>You're on fire! Keep the momentum going 🚀</p>
+  </div>
 
-    <div id="lastSubmission" class="hidden">
-      <h3>Last Submission</h3>
+  <div class="streak-days">
+    <div class="day-box filled">M</div>
+    <div class="day-box missed">T</div>
+    <div class="day-box filled">W</div>
+    <div class="day-box filled">T</div>
+    <div class="day-box upcoming">F</div>
+  </div>
+
+  <div class="progress-chart">
+    <img src="7060030d-1cd2-4083-ada7-f0ff44ea615a.png" alt="Chart">
+  </div>
+
+  <div class="summary">
+    <div class="summary-box">
+      <span class="count">8</span>
+      <span class="label">Easy</span>
+    </div>
+    <div class="summary-box">
+      <span class="count">22</span>
+      <span class="label">Medium</span>
+    </div>
+    <div class="summary-box">
+      <span class="count">4</span>
+      <span class="label">Hard</span>
+    </div>
+  </div>
+
+  <div class="total-progress">Total Problems Solved: <strong>34</strong></div>
+
+  <div class="footer">
+    <small>🛠️ Need Help? <a href="#">Report a bug</a></small><br>
+    <small>Crafted with ❤️ by <a href="https://github.com/3ba2ii" target="_blank">@3ba2ii</a></small>
+  </div>
+</div>
+
+
+
+    <!-- <div id="lastSubmission" class="hidden">
+      <h3>📘 Last Submission</h3>
       <p><strong>Platform:</strong> <span id="lastPlatform"></span></p>
       <p><strong>Problem:</strong> <span id="lastTitle"></span></p>
-      <p><strong>Commit Message:</strong> <span id="lastCommitMsg"></span></p>
-    </div>
+      <p><strong>Commit:</strong> <span id="lastCommitMsg"></span></p>
+    </div> -->
   </div>
 
   <script src="popup.js"></script>
