--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -8,8 +8,13 @@
 </head>
 <body>
   <div id="app">
+    
+    <div id="toastContainer" class="toast-container"></div>
+
   <div id="repoSetup" class="repo-setup-section">
-  <form id="repoSetupForm">
+  <form id="repoSetupForm" class="form1">
+        <h2>AlgoGit</h2>
+
     <label for="repoUrl">GitHub Repository URL *</label>
     <input type="url" id="repoUrl" placeholder="https://github.com/username/repo.git" required />
     
@@ -22,12 +27,30 @@
     <!-- <button type="submit" class="connect-btn">Connect Repo</button> -->
   </form>
 
-  <div class="divider"><span>OR</span></div>
+  <div class="divider"><span></span></div>
 
-  <button id="githubLogin" class="github-btn" type="button">
-    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="20" />
-    <span>Login with GitHub</span>
-  </button>
+<button id="githubLogin" class="github-btn" type="button">
+  <svg class="gitimg" width="20" height="20" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd" clip-rule="evenodd"
+      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 
+         5.47 7.59.4.07.55-.17.55-.38 
+         0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94
+         -.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+         -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 
+         1.87.87 2.33.66.07-.52.28-.87.51-1.07
+         -1.78-.2-3.64-.89-3.64-3.95 
+         0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 
+         0 0 .67-.21 2.2.82.64-.18 1.32-.27 
+         2-.27.68 0 1.36.09 2 .27 
+         1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 
+         1.92.08 2.12.51.56.82 1.27.82 2.15 
+         0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 
+         1.48 0 1.07-.01 1.93-.01 2.2 
+         0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z" />
+  </svg>
+  <span class="gittext">Authenticate with GitHub</span>
+</button>
+
 </div>
 
 
@@ -45,32 +68,35 @@
     <div class="day-box upcoming">F</div>
   </div>
 
-  <div class="progress-chart">
-    <img src="7060030d-1cd2-4083-ada7-f0ff44ea615a.png" alt="Chart">
-  </div>
+
 
   <div class="summary">
-    <div class="summary-box">
+    <div class="summary-box easy">
       <span class="count">8</span>
       <span class="label">Easy</span>
     </div>
-    <div class="summary-box">
+    <div class="summary-box medium">
       <span class="count">22</span>
       <span class="label">Medium</span>
     </div>
-    <div class="summary-box">
+    <div class="summary-box hard">
       <span class="count">4</span>
       <span class="label">Hard</span>
     </div>
   </div>
 
-  <div class="total-progress">Total Problems Solved: <strong>34</strong></div>
+  <div class="total-progress">
+    🧮 Total Problems Solved: <strong>34</strong>
+  </div>
 
   <div class="footer">
     <small>🛠️ Need Help? <a href="#">Report a bug</a></small><br>
     <small>Crafted with ❤️ by <a href="https://github.com/3ba2ii" target="_blank">@3ba2ii</a></small>
   </div>
 </div>
+
+
+
 
 
 
