--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -53,22 +53,43 @@
 
 </div>
 
+<div id="repoInfo" class="hidden">
+  <div class="repo-info-header">
+    <span class="platform-filter">
+      <select id="platformSelect">
+        <option>All Platforms</option>
+        <option>LeetCode</option>
+        <option>Codeforces</option>
+        <option>GeeksforGeeks</option>
+      </select>
+    </span>
+<button id="logoutBtn" class="logout-btn" title="Logout">
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+       stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
+    <polyline points="16 17 21 12 16 7" />
+    <line x1="21" y1="12" x2="9" y2="12" />
+  </svg>
+</button>
 
-  <div id="repoInfo" class="hidden">
-  <div class="streak-header">
-    <h2>🔥 2-Day Streak</h2>
-    <p>You're on fire! Keep the momentum going 🚀</p>
+
   </div>
 
-  <div class="streak-days">
-    <div class="day-box filled">M</div>
-    <div class="day-box missed">T</div>
-    <div class="day-box filled">W</div>
-    <div class="day-box filled">T</div>
-    <div class="day-box upcoming">F</div>
+  <div class="badge-box">
+    <h3>Total Problems Solved</h3>
+    <div class="total-count">34</div>
   </div>
 
-
+  <div class="streak-section">
+    <h4>🔥 Streak Progress</h4>
+    <div class="streak-bar">
+      <div class="day-pill filled">M</div>
+      <div class="day-pill missed">T</div>
+      <div class="day-pill filled">W</div>
+      <div class="day-pill filled">T</div>
+      <div class="day-pill upcoming">F</div>
+    </div>
+  </div>
 
   <div class="summary">
     <div class="summary-box easy">
@@ -85,12 +106,8 @@
     </div>
   </div>
 
-  <div class="total-progress">
-    🧮 Total Problems Solved: <strong>34</strong>
-  </div>
-
   <div class="footer">
-    <small>🛠️ Need Help? <a href="#">Report a bug</a></small><br>
+    <small>🛠️ Need Help? <a href="#">Report a bug</a></small><br />
     <small>Crafted with ❤️ by <a href="https://github.com/3ba2ii" target="_blank">@3ba2ii</a></small>
   </div>
 </div>
