--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -54,7 +54,26 @@
 </div>
 
 <div id="repoInfo" class="hidden">
+  
   <div class="repo-info-header">
+      <svg class="gitimg1" width="20" height="20" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd" clip-rule="evenodd"
+      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 
+         5.47 7.59.4.07.55-.17.55-.38 
+         0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94
+         -.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+         -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 
+         1.87.87 2.33.66.07-.52.28-.87.51-1.07
+         -1.78-.2-3.64-.89-3.64-3.95 
+         0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 
+         0 0 .67-.21 2.2.82.64-.18 1.32-.27 
+         2-.27.68 0 1.36.09 2 .27 
+         1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 
+         1.92.08 2.12.51.56.82 1.27.82 2.15 
+         0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 
+         1.48 0 1.07-.01 1.93-.01 2.2 
+         0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z" />
+  </svg>
     <span class="platform-filter">
       <select id="platformSelect">
         <option>All Platforms</option>
@@ -63,6 +82,7 @@
         <option>GeeksforGeeks</option>
       </select>
     </span>
+    
 <button id="logoutBtn" class="logout-btn" title="Logout">
   <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -80,16 +100,19 @@
     <div class="total-count">34</div>
   </div>
 
-  <div class="streak-section">
-    <h4>🔥 Streak Progress</h4>
-    <div class="streak-bar">
-      <div class="day-pill filled">M</div>
-      <div class="day-pill missed">T</div>
-      <div class="day-pill filled">W</div>
-      <div class="day-pill filled">T</div>
-      <div class="day-pill upcoming">F</div>
-    </div>
+ <div class="streak-section">
+  <h4>🔥 Streak Progress</h4>
+  <div class="streak-bar">
+    <div class="day-pill filled">S</div>
+    <div class="day-pill filled">M</div>
+    <div class="day-pill missed">T</div>
+    <div class="day-pill filled">W</div>
+    <div class="day-pill filled">T</div>
+    <div class="day-pill upcoming">F</div>
+    <div class="day-pill upcoming">S</div>
   </div>
+</div>
+
 
   <div class="summary">
     <div class="summary-box easy">
@@ -108,13 +131,18 @@
 
   <div class="footer">
     <small>🛠️ Need Help? <a href="#">Report a bug</a></small><br />
-    <small>Crafted with ❤️ by <a href="https://github.com/3ba2ii" target="_blank">@3ba2ii</a></small>
+    <small>Crafted with ❤️ by <a href="https://github.com/3ba2ii" target="_blank">sabarim6369</a></small>
   </div>
 </div>
 
 
 
 
+<div id="githubPopup" class="popup-box hidden">
+  <label for="editGithubUrl">GitHub Repository URL</label>
+  <input type="url" id="editGithubUrl" placeholder="https://github.com/username/repo.git" />
+  <button id="saveGithubUrl">Save</button>
+</div>
 
 
    
