Added option for geeks for geeks

--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -10,6 +10,12 @@
   <div id="app">
     
     <div id="toastContainer" class="toast-container"></div>
+<div id="welcomePage" class="welcome-page">
+  <h1>Welcome to <span class="brand">AlgoGit</span> 🚀</h1>
+  <p class="tagline">Your personal DSA journal powered by GitHub and AI</p>
+  <button id="enterAppBtn" class="enter-btn">Enter AlgoGit</button>
+</div>
+
 
   <div id="repoSetup" class="repo-setup-section">
   <form id="repoSetupForm" class="form1">
@@ -97,7 +103,7 @@
 
   <div class="badge-box">
     <h3>Total Problems Solved</h3>
-    <div class="total-count">34</div>
+    <div class="total-count">0</div>
   </div>
 
  <div class="streak-section">
@@ -116,22 +122,22 @@
 
   <div class="summary">
     <div class="summary-box easy">
-      <span class="count">8</span>
+      <span class="count">0</span>
       <span class="label">Easy</span>
     </div>
     <div class="summary-box medium">
-      <span class="count">22</span>
+      <span class="count">0</span>
       <span class="label">Medium</span>
     </div>
     <div class="summary-box hard">
-      <span class="count">4</span>
+      <span class="count">0</span>
       <span class="label">Hard</span>
     </div>
   </div>
 
   <div class="footer">
     <small>🛠️ Need Help? <a href="#">Report a bug</a></small><br />
-    <small>Crafted with ❤️ by <a href="https://github.com/3ba2ii" target="_blank">sabarim6369</a></small>
+    <small>Crafted with ❤️ by <a href="https://github.com/sabarim6369" target="_blank">sabarim6369</a></small>
   </div>
 </div>
 
